# edsm-api

./: Cargo.toml  Makefile
src/: lib.rs  status.rs  system.rs  systems.rs
src/dec/: date_format.rs  date_format_opt.rs
tests/: api_tests.rs
