[package]
name = "edsm-api"
version = "0.1.0"
authors = ["Igaguri <igagurimk@gmail.com>"]
edition = "2018"

description = "Wrapper of EDSM API"
license = "MIT OR Apache-2.0"
categories = ["api-bindings"]
keywords = []
readme = "README.md"
repository = "https://github.com/IgaguriMK/edsm-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.4.0", features = ["attributes"]}
chrono = {version = "0.4.10", features = ["serde"]}
edsm-dumps-model = {version = "0.5.1", path = "../edsm-dumps-model"}
log = "0.4.8"
serde = {version = "1.0.104", features = ["derive"]}
serde_json = "1.0"
surf = "1.0.3"
thiserror = "1.0.9"
url = "2.1"

[dev-dependencies]
anyhow = "1.0"
